--- a/CSS/bin.css
+++ b/CSS/bin.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/Images/BackgroundBin.png');
+  background-image: url('../Images/BackgroundBin.png');
   text-align:center;  
 }
 
